Adopt pnpm as the standardized package manager for the project
- Added "packageManager" field with version "pnpm@10.15.0" to package.json

--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md}": "prettier --write"
-  }
+  },
+  "packageManager": "pnpm@10.15.0"
 }
