--- a/package.json
+++ b/package.json
@@ -34,14 +34,12 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@types/turndown": "^5.0.5",
-    "@types/webextension-polyfill": "^0.12.3",
     "@vitejs/plugin-react": "^5.0.0",
     "jsdom": "^26.1.0",
     "typescript": "~5.9.2",
     "vite": "^7.0.0",
     "vite-plugin-web-extension": "^4.4.5",
-    "vitest": "^3.2.4",
-    "webextension-polyfill": "^0.12.0"
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx,json,css,md}": "prettier --write"
