--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,5 @@
 {
-  "{{chrome}}.manifest_version": 3,
-  "{{firefox}}.manifest_version": 2,
+  "manifest_version": 3,
   "name": "Emerald",
   "version": "1.0.0",
   "description": "Chrome extension for OpenAI API integration",
@@ -11,16 +10,12 @@
     "96": "icon/96.png",
     "128": "icon/128.png"
   },
-  "{{chrome}}.action": {},
-  "{{chrome}}.side_panel": {
+  "action": {},
+  "side_panel": {
     "default_path": "src/sidepanel/index.html"
   },
-  "{{firefox}}.browser_action": {
-    "default_popup": "src/popup.html"
-  },
   "background": {
-    "{{chrome}}.service_worker": "src/background/background.ts",
-    "{{firefox}}.scripts": ["src/background/background.ts"]
+    "service_worker": "src/background/background.ts"
   },
   "content_scripts": [
     {
